Crash when using motion blur with Freestyle. #41180

Closed
opened 2014-07-25 16:23:43 +02:00 by ronan ducluzeau · 6 comments

System Information
ubuntu 64 bit Nvidia geforce Titan Black

Blender Version
Broken: 2.71 hash bae2b3a
Worked: official 2.71

Short description of error
When motion blur is enabled for a freestyle render, blender crashes at render.

Exact steps for others to reproduce the error
Make an animation of default cube.
Enable Freestyle
Enable motion blur. Add more than one sample to motion blur settings.
Hit render -> Blender crashes.

Render attached .blend.
mb_crash.blend

**System Information** ubuntu 64 bit Nvidia geforce Titan Black **Blender Version** Broken: 2.71 hash bae2b3a Worked: official 2.71 **Short description of error** When motion blur is enabled for a freestyle render, blender crashes at render. **Exact steps for others to reproduce the error** Make an animation of default cube. Enable Freestyle Enable motion blur. Add more than one sample to motion blur settings. Hit render -> Blender crashes. Render attached .blend. [mb_crash.blend](https://archive.blender.org/developer/F99525/mb_crash.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @zeauro

Added subscriber: @zeauro
Tamito Kajiyama was assigned by Bastien Montagne 2014-07-25 16:27:51 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

This issue was referenced by 698a9a2434

This issue was referenced by 698a9a2434ac3a4f87130b4013d5228e24f3a45d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 698a9a2434.

Closed by commit 698a9a2434.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41180
No description provided.