Fix T41180: Crash when using motion blur with Freestyle.

In pipeline.c, do_render_3d() is called multiple times for each frame when
motion blur is used.  This caused duplicates of the same struct Render instance
in re->freestyle_renders, resulting in fatal double freeing of allocated memory.